[tool.poetry]
name = "codecrafters-http-server-python"
version = "0.1.0"
description = ""
authors = ["Karl Webster <19327709+ktasper@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
